<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Authentication.check_mail">

    <TextView
        android:id="@+id/checkmail"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="-280dp"
        android:text="@string/checkmail"
        android:textAlignment="center"
        android:textAppearance="@style/create_an_a"
        android:textSize="22sp" />

    <View
        android:id="@+id/pablo_283_1"
        android:layout_width="177dp"
        android:layout_height="107dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/checkmail"
        android:background="@drawable/envelope"
        />

    <TextView
        android:id="@+id/welcoming"
        android:layout_width="318dp"
        android:layout_height="75dp"
        android:layout_below="@+id/pablo_283_1"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:lineSpacingExtra="10sp"
        android:text="@string/we_have_sen"
        android:textAlignment="center"
        android:textAppearance="@style/welcoming"
        android:translationY="2dp" />

    <Button
        android:id="@+id/CheckMailApp"
        android:layout_width="313dp"
        android:layout_height="52dp"
        android:text="@string/openmail"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/welcoming"
        android:layout_marginTop="100dp"
        />

    <TextView
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_below="@+id/CheckMailApp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="211dp"
        android:lineSpacingExtra="4sp"
        android:text="@string/nomail"
        android:textAppearance="@style/new_user_si" />

    <TextView
        android:layout_width="105dp"
        android:layout_height="36dp"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="4sp"
        android:text="@string/resendmail"
        android:textAppearance="@style/signup"
        android:layout_centerVertical="true"
        android:layout_below="@+id/CheckMailApp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="200dp"
        android:layout_marginLeft="270dp"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="121dp"
        android:layout_height="78dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="300dp"
        app:srcCompat="@drawable/witssociallogo2" />


</RelativeLayout>