<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication.ForgotPasswordActivity"
    android:background="@color/white">

    <TextView
        android:layout_width="221dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:lineSpacingExtra="-5sp"
        android:text="@string/forgot_pass"
        android:textAlignment="center"
        android:textAppearance="@style/enter_otp_s"
        android:textSize="22sp"
        android:id="@+id/forgot_pass"
        />

    <View
        android:id="@+id/pablo_come_"
        android:layout_width="228dp"
        android:layout_height="129dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/forgot_pass"
        android:layout_marginTop="10dp"
        android:background="@drawable/forgot"
        />

    <TextView
        android:id="@+id/dont_worry_"
        android:layout_width="347dp"
        android:layout_height="85dp"
        android:lineSpacingExtra="4sp"
        android:text="@string/dont_worry_"
        android:textAppearance="@style/dont_worry_"
        android:translationY="-1.8sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/pablo_come_"
        android:layout_marginTop="20dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Email_reset_layout"
        android:layout_width="296dp"
        android:layout_height="84dp"
        android:hint="@string/email"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/dont_worry_"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reset_mail_editText"
            android:layout_width="match_parent"
            android:layout_height="61dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/SubmitButton"
        android:layout_width="306dp"
        android:layout_height="49dp"
        android:text="@string/submitbutton"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/Email_reset_layout"
        android:layout_marginTop="20dp"

        />


</RelativeLayout>